parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    CHAR
    COLON
    END
    FUNCESP
    GTE
    IFEQUAL
    LTE
    NUMPY
    QUOTE
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM gotomain ID SEMICOLON decvar modules
Rule 2     gotomain -> <empty>
Rule 3     decvar -> VAR decvarp
Rule 4     decvar -> VAR decvarp decvar
Rule 5     decvar -> <empty>
Rule 6     decvarp -> type decvarpp SEMICOLON
Rule 7     decvarpp -> ID COMMA decvarpp
Rule 8     decvarpp -> ID
Rule 9     type -> INT
Rule 10    type -> FLOAT
Rule 11    function -> FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
Rule 12    decfunc -> ID
Rule 13    voidfunction -> FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
Rule 14    mainfunction -> MAIN LPAREN RPAREN LBRACE body RBRACE
Rule 15    modules -> function modules
Rule 16    modules -> voidfunction modules
Rule 17    modules -> function
Rule 18    modules -> voidfunction
Rule 19    body -> decvar statements body
Rule 20    body -> statements body
Rule 21    body -> decvar
Rule 22    body -> <empty>
Rule 23    param -> type ID
Rule 24    param -> type ID COMMA param
Rule 25    param -> <empty>
Rule 26    exp -> texp
Rule 27    exp -> texp OR exp
Rule 28    texp -> gexp
Rule 29    texp -> gexp AND texp
Rule 30    gexp -> mexp
Rule 31    gexp -> mexp gexpp mexp
Rule 32    gexpp -> LT
Rule 33    gexpp -> GT
Rule 34    gexpp -> EQUAL
Rule 35    gexpp -> DIFF
Rule 36    mexp -> t
Rule 37    mexp -> mexp PLUS t
Rule 38    mexp -> mexp MINUS t
Rule 39    t -> f
Rule 40    t -> t MULT f
Rule 41    t -> t DIV f
Rule 42    f -> LPAREN exp RPAREN
Rule 43    f -> CTI
Rule 44    f -> CTF
Rule 45    f -> var
Rule 46    f -> call
Rule 47    statements -> assign
Rule 48    statements -> function
Rule 49    statements -> voidfunction
Rule 50    statements -> call
Rule 51    statements -> read
Rule 52    statements -> print
Rule 53    statements -> if
Rule 54    statements -> while
Rule 55    statements -> for
Rule 56    assign -> var EQUAL exp SEMICOLON
Rule 57    read -> READ var
Rule 58    print -> PRINT LPAREN printp
Rule 59    printp -> exp RPAREN
Rule 60    printp -> exp COMMA printp
Rule 61    var -> ID
Rule 62    call -> ID LPAREN callp RPAREN
Rule 63    callp -> exp SEMICOLON callp
Rule 64    callp -> exp
Rule 65    if -> IF LPAREN exp RPAREN quadsIf statements ifelse jumpsIf
Rule 66    ifelse -> <empty>
Rule 67    ifelse -> ELSE quadsElse statements
Rule 68    quadsIf -> <empty>
Rule 69    jumpsIf -> <empty>
Rule 70    quadsElse -> <empty>
Rule 71    while -> WHILE LPAREN saveJumps exp RPAREN quadsWhile statements jumpsWhile whilep
Rule 72    whilep -> SEMICOLON
Rule 73    whilep -> statements whilep
Rule 74    saveJumps -> <empty>
Rule 75    quadsWhile -> <empty>
Rule 76    jumpsWhile -> <empty>
Rule 77    for -> FOR LPAREN var SEMICOLON exp SEMICOLON exp RPAREN LBRACKET statements forp
Rule 78    forp -> RBRACKET
Rule 79    forp -> statements forp
Rule 80    funcesp -> array
Rule 81    funcesp -> matrix
Rule 82    funcesp -> mean
Rule 83    funcesp -> layers
Rule 84    funcesp -> sequential
Rule 85    funcesp -> compile
Rule 86    funcesp -> fit
Rule 87    funcesp -> predict
Rule 88    funcesp -> getweights
Rule 89    array -> ID EQUAL ARRAY LPAREN var arrayp
Rule 90    arrayp -> RPAREN
Rule 91    arrayp -> COMMA var RPAREN
Rule 92    matrix -> ID EQUAL MATRIX LPAREN array matrixp
Rule 93    matrixp -> RPAREN
Rule 94    matrixp -> COMMA array RPAREN
Rule 95    mean -> MEAN LPAREN array RPAREN
Rule 96    layers -> ID EQUAL LAYERS LPAREN UNITS EQUAL INT RPAREN
Rule 97    sequential -> ID EQUAL SEQUENTIAL LPAREN LBRACKET layers sequentialp
Rule 98    sequentialp -> RBRACKET RPAREN
Rule 99    sequentialp -> COMMA layers sequentialp
Rule 100   compile -> sequential DOT COMPILE LPAREN RPAREN
Rule 101   fit -> ID EQUAL sequential DOT FIT LPAREN array COMMA array COMMA EPOCHS EQUAL INT COMMA VERBOSE EQUAL fitp
Rule 102   fitp -> TRUE RPAREN
Rule 103   fitp -> FALSE RPAREN
Rule 104   predict -> ID EQUAL sequential DOT PREDICT LPAREN LBRACKET predictp
Rule 105   predictp -> INT RBRACKET RPAREN
Rule 106   predictp -> FLOAT RBRACKET RPAREN
Rule 107   getweights -> layers DOT GETWEIGHTS LPAREN RPAREN
Rule 108   empty -> <empty>

Terminals, with rules where they appear

AND                  : 29
ARRAY                : 89
ASSIGN               : 
CHAR                 : 
COLON                : 
COMMA                : 7 24 60 91 94 99 101 101 101
COMPILE              : 100
CTF                  : 44
CTI                  : 43
DIFF                 : 35
DIV                  : 41
DOT                  : 100 101 104 107
ELSE                 : 67
END                  : 
EPOCHS               : 101
EQUAL                : 34 56 89 92 96 96 97 101 101 101 104
FALSE                : 103
FIT                  : 101
FLOAT                : 10 106
FOR                  : 77
FUNCESP              : 
FUNCTION             : 11 13
GETWEIGHTS           : 107
GT                   : 33
GTE                  : 
ID                   : 1 7 8 12 23 24 61 62 89 92 96 97 101 104
IF                   : 65
IFEQUAL              : 
INT                  : 9 96 101 105
LAYERS               : 96
LBRACE               : 11 13 14
LBRACKET             : 77 97 104
LPAREN               : 11 13 14 42 58 62 65 71 77 89 92 95 96 97 100 101 104 107
LT                   : 32
LTE                  : 
MAIN                 : 14
MATRIX               : 92
MEAN                 : 95
MINUS                : 38
MULT                 : 40
NUMPY                : 
OR                   : 27
PLUS                 : 37
PREDICT              : 104
PRINT                : 58
PROGRAM              : 1
QUOTE                : 
RBRACE               : 11 13 14
RBRACKET             : 78 98 105 106
READ                 : 57
RPAREN               : 11 13 14 42 59 62 65 71 77 90 91 93 94 95 96 98 100 102 103 105 106 107
SEMICOLON            : 1 6 56 63 72 77 77
SEQUENTIAL           : 97
STRING               : 
TRUE                 : 102
UNITS                : 96
VAR                  : 3 4
VERBOSE              : 101
VOID                 : 13
WHILE                : 71
error                : 

Nonterminals, with rules where they appear

array                : 80 92 94 95 101 101
arrayp               : 89
assign               : 47
body                 : 11 13 14 19 20
call                 : 46 50
callp                : 62 63
compile              : 85
decfunc              : 11 13
decvar               : 1 4 19 21
decvarp              : 3 4
decvarpp             : 6 7
empty                : 
exp                  : 27 42 56 59 60 63 64 65 71 77 77
f                    : 39 40 41
fit                  : 86
fitp                 : 101
for                  : 55
forp                 : 77 79
funcesp              : 
function             : 15 17 48
getweights           : 88
gexp                 : 28 29
gexpp                : 31
gotomain             : 1
if                   : 53
ifelse               : 65
jumpsIf              : 65
jumpsWhile           : 71
layers               : 83 97 99 107
mainfunction         : 
matrix               : 81
matrixp              : 92
mean                 : 82
mexp                 : 30 31 31 37 38
modules              : 1 15 16
param                : 11 13 24
predict              : 87
predictp             : 104
print                : 52
printp               : 58 60
program              : 0
quadsElse            : 67
quadsIf              : 65
quadsWhile           : 71
read                 : 51
saveJumps            : 71
sequential           : 84 100 101 104
sequentialp          : 97 99
statements           : 19 20 65 67 71 73 77 79
t                    : 36 37 38 40 41
texp                 : 26 27 29
type                 : 6 11 23 24
var                  : 45 56 57 77 89 91
voidfunction         : 16 18 49
while                : 54
whilep               : 71 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM gotomain ID SEMICOLON decvar modules

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . gotomain ID SEMICOLON decvar modules
    (2) gotomain -> .

    ID              reduce using rule 2 (gotomain -> .)

    gotomain                       shift and go to state 3

state 3

    (1) program -> PROGRAM gotomain . ID SEMICOLON decvar modules

    ID              shift and go to state 4


state 4

    (1) program -> PROGRAM gotomain ID . SEMICOLON decvar modules

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM gotomain ID SEMICOLON . decvar modules
    (3) decvar -> . VAR decvarp
    (4) decvar -> . VAR decvarp decvar
    (5) decvar -> .

    VAR             shift and go to state 7
    FUNCTION        reduce using rule 5 (decvar -> .)

    decvar                         shift and go to state 6

state 6

    (1) program -> PROGRAM gotomain ID SEMICOLON decvar . modules
    (15) modules -> . function modules
    (16) modules -> . voidfunction modules
    (17) modules -> . function
    (18) modules -> . voidfunction
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE

    FUNCTION        shift and go to state 11

    modules                        shift and go to state 8
    function                       shift and go to state 9
    voidfunction                   shift and go to state 10

state 7

    (3) decvar -> VAR . decvarp
    (4) decvar -> VAR . decvarp decvar
    (6) decvarp -> . type decvarpp SEMICOLON
    (9) type -> . INT
    (10) type -> . FLOAT

    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    decvarp                        shift and go to state 12
    type                           shift and go to state 13

state 8

    (1) program -> PROGRAM gotomain ID SEMICOLON decvar modules .

    $end            reduce using rule 1 (program -> PROGRAM gotomain ID SEMICOLON decvar modules .)


state 9

    (15) modules -> function . modules
    (17) modules -> function .
    (15) modules -> . function modules
    (16) modules -> . voidfunction modules
    (17) modules -> . function
    (18) modules -> . voidfunction
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE

    $end            reduce using rule 17 (modules -> function .)
    FUNCTION        shift and go to state 11

    function                       shift and go to state 9
    modules                        shift and go to state 16
    voidfunction                   shift and go to state 10

state 10

    (16) modules -> voidfunction . modules
    (18) modules -> voidfunction .
    (15) modules -> . function modules
    (16) modules -> . voidfunction modules
    (17) modules -> . function
    (18) modules -> . voidfunction
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE

    $end            reduce using rule 18 (modules -> voidfunction .)
    FUNCTION        shift and go to state 11

    voidfunction                   shift and go to state 10
    modules                        shift and go to state 17
    function                       shift and go to state 9

state 11

    (11) function -> FUNCTION . type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> FUNCTION . VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
    (9) type -> . INT
    (10) type -> . FLOAT

    VOID            shift and go to state 19
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    type                           shift and go to state 18

state 12

    (3) decvar -> VAR decvarp .
    (4) decvar -> VAR decvarp . decvar
    (3) decvar -> . VAR decvarp
    (4) decvar -> . VAR decvarp decvar
    (5) decvar -> .

  ! reduce/reduce conflict for FUNCTION resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for ID resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for READ resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for PRINT resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for IF resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for WHILE resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (decvar -> VAR decvarp .)
  ! reduce/reduce conflict for RBRACE resolved using rule 3 (decvar -> VAR decvarp .)
    FUNCTION        reduce using rule 3 (decvar -> VAR decvarp .)
    ID              reduce using rule 3 (decvar -> VAR decvarp .)
    READ            reduce using rule 3 (decvar -> VAR decvarp .)
    PRINT           reduce using rule 3 (decvar -> VAR decvarp .)
    IF              reduce using rule 3 (decvar -> VAR decvarp .)
    WHILE           reduce using rule 3 (decvar -> VAR decvarp .)
    FOR             reduce using rule 3 (decvar -> VAR decvarp .)
    RBRACE          reduce using rule 3 (decvar -> VAR decvarp .)
    VAR             shift and go to state 7

  ! FUNCTION        [ reduce using rule 5 (decvar -> .) ]
  ! ID              [ reduce using rule 5 (decvar -> .) ]
  ! READ            [ reduce using rule 5 (decvar -> .) ]
  ! PRINT           [ reduce using rule 5 (decvar -> .) ]
  ! IF              [ reduce using rule 5 (decvar -> .) ]
  ! WHILE           [ reduce using rule 5 (decvar -> .) ]
  ! FOR             [ reduce using rule 5 (decvar -> .) ]
  ! RBRACE          [ reduce using rule 5 (decvar -> .) ]

    decvar                         shift and go to state 20

state 13

    (6) decvarp -> type . decvarpp SEMICOLON
    (7) decvarpp -> . ID COMMA decvarpp
    (8) decvarpp -> . ID

    ID              shift and go to state 22

    decvarpp                       shift and go to state 21

state 14

    (9) type -> INT .

    ID              reduce using rule 9 (type -> INT .)


state 15

    (10) type -> FLOAT .

    ID              reduce using rule 10 (type -> FLOAT .)


state 16

    (15) modules -> function modules .

    $end            reduce using rule 15 (modules -> function modules .)


state 17

    (16) modules -> voidfunction modules .

    $end            reduce using rule 16 (modules -> voidfunction modules .)


state 18

    (11) function -> FUNCTION type . decfunc LPAREN param RPAREN LBRACE body RBRACE
    (12) decfunc -> . ID

    ID              shift and go to state 24

    decfunc                        shift and go to state 23

state 19

    (13) voidfunction -> FUNCTION VOID . decfunc LPAREN param RPAREN LBRACE body RBRACE
    (12) decfunc -> . ID

    ID              shift and go to state 24

    decfunc                        shift and go to state 25

state 20

    (4) decvar -> VAR decvarp decvar .

    FUNCTION        reduce using rule 4 (decvar -> VAR decvarp decvar .)
    ID              reduce using rule 4 (decvar -> VAR decvarp decvar .)
    READ            reduce using rule 4 (decvar -> VAR decvarp decvar .)
    PRINT           reduce using rule 4 (decvar -> VAR decvarp decvar .)
    IF              reduce using rule 4 (decvar -> VAR decvarp decvar .)
    WHILE           reduce using rule 4 (decvar -> VAR decvarp decvar .)
    FOR             reduce using rule 4 (decvar -> VAR decvarp decvar .)
    RBRACE          reduce using rule 4 (decvar -> VAR decvarp decvar .)


state 21

    (6) decvarp -> type decvarpp . SEMICOLON

    SEMICOLON       shift and go to state 26


state 22

    (7) decvarpp -> ID . COMMA decvarpp
    (8) decvarpp -> ID .

    COMMA           shift and go to state 27
    SEMICOLON       reduce using rule 8 (decvarpp -> ID .)


state 23

    (11) function -> FUNCTION type decfunc . LPAREN param RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 28


state 24

    (12) decfunc -> ID .

    LPAREN          reduce using rule 12 (decfunc -> ID .)


state 25

    (13) voidfunction -> FUNCTION VOID decfunc . LPAREN param RPAREN LBRACE body RBRACE

    LPAREN          shift and go to state 29


state 26

    (6) decvarp -> type decvarpp SEMICOLON .

    VAR             reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    FUNCTION        reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    ID              reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    READ            reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    PRINT           reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    IF              reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    WHILE           reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    FOR             reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)
    RBRACE          reduce using rule 6 (decvarp -> type decvarpp SEMICOLON .)


state 27

    (7) decvarpp -> ID COMMA . decvarpp
    (7) decvarpp -> . ID COMMA decvarpp
    (8) decvarpp -> . ID

    ID              shift and go to state 22

    decvarpp                       shift and go to state 30

state 28

    (11) function -> FUNCTION type decfunc LPAREN . param RPAREN LBRACE body RBRACE
    (23) param -> . type ID
    (24) param -> . type ID COMMA param
    (25) param -> .
    (9) type -> . INT
    (10) type -> . FLOAT

    RPAREN          reduce using rule 25 (param -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    type                           shift and go to state 31
    param                          shift and go to state 32

state 29

    (13) voidfunction -> FUNCTION VOID decfunc LPAREN . param RPAREN LBRACE body RBRACE
    (23) param -> . type ID
    (24) param -> . type ID COMMA param
    (25) param -> .
    (9) type -> . INT
    (10) type -> . FLOAT

    RPAREN          reduce using rule 25 (param -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    param                          shift and go to state 33
    type                           shift and go to state 31

state 30

    (7) decvarpp -> ID COMMA decvarpp .

    SEMICOLON       reduce using rule 7 (decvarpp -> ID COMMA decvarpp .)


state 31

    (23) param -> type . ID
    (24) param -> type . ID COMMA param

    ID              shift and go to state 34


state 32

    (11) function -> FUNCTION type decfunc LPAREN param . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 35


state 33

    (13) voidfunction -> FUNCTION VOID decfunc LPAREN param . RPAREN LBRACE body RBRACE

    RPAREN          shift and go to state 36


state 34

    (23) param -> type ID .
    (24) param -> type ID . COMMA param

    RPAREN          reduce using rule 23 (param -> type ID .)
    COMMA           shift and go to state 37


state 35

    (11) function -> FUNCTION type decfunc LPAREN param RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 38


state 36

    (13) voidfunction -> FUNCTION VOID decfunc LPAREN param RPAREN . LBRACE body RBRACE

    LBRACE          shift and go to state 39


state 37

    (24) param -> type ID COMMA . param
    (23) param -> . type ID
    (24) param -> . type ID COMMA param
    (25) param -> .
    (9) type -> . INT
    (10) type -> . FLOAT

    RPAREN          reduce using rule 25 (param -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15

    type                           shift and go to state 31
    param                          shift and go to state 40

state 38

    (11) function -> FUNCTION type decfunc LPAREN param RPAREN LBRACE . body RBRACE
    (19) body -> . decvar statements body
    (20) body -> . statements body
    (21) body -> . decvar
    (22) body -> .
    (3) decvar -> . VAR decvarp
    (4) decvar -> . VAR decvarp decvar
    (5) decvar -> .
    (47) statements -> . assign
    (48) statements -> . function
    (49) statements -> . voidfunction
    (50) statements -> . call
    (51) statements -> . read
    (52) statements -> . print
    (53) statements -> . if
    (54) statements -> . while
    (55) statements -> . for
    (56) assign -> . var EQUAL exp SEMICOLON
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
    (62) call -> . ID LPAREN callp RPAREN
    (57) read -> . READ var
    (58) print -> . PRINT LPAREN printp
    (65) if -> . IF LPAREN exp RPAREN quadsIf statements ifelse jumpsIf
    (71) while -> . WHILE LPAREN saveJumps exp RPAREN quadsWhile statements jumpsWhile whilep
    (77) for -> . FOR LPAREN var SEMICOLON exp SEMICOLON exp RPAREN LBRACKET statements forp
    (61) var -> . ID

  ! reduce/reduce conflict for RBRACE resolved using rule 5 (decvar -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    VAR             shift and go to state 7
    RBRACE          reduce using rule 5 (decvar -> .)
    FUNCTION        shift and go to state 11
    ID              shift and go to state 54
    READ            shift and go to state 55
    PRINT           shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59

  ! RBRACE          [ reduce using rule 22 (body -> .) ]
  ! FUNCTION        [ reduce using rule 5 (decvar -> .) ]
  ! ID              [ reduce using rule 5 (decvar -> .) ]
  ! READ            [ reduce using rule 5 (decvar -> .) ]
  ! PRINT           [ reduce using rule 5 (decvar -> .) ]
  ! IF              [ reduce using rule 5 (decvar -> .) ]
  ! WHILE           [ reduce using rule 5 (decvar -> .) ]
  ! FOR             [ reduce using rule 5 (decvar -> .) ]

    body                           shift and go to state 41
    decvar                         shift and go to state 42
    statements                     shift and go to state 43
    assign                         shift and go to state 44
    function                       shift and go to state 45
    voidfunction                   shift and go to state 46
    call                           shift and go to state 47
    read                           shift and go to state 48
    print                          shift and go to state 49
    if                             shift and go to state 50
    while                          shift and go to state 51
    for                            shift and go to state 52
    var                            shift and go to state 53

state 39

    (13) voidfunction -> FUNCTION VOID decfunc LPAREN param RPAREN LBRACE . body RBRACE
    (19) body -> . decvar statements body
    (20) body -> . statements body
    (21) body -> . decvar
    (22) body -> .
    (3) decvar -> . VAR decvarp
    (4) decvar -> . VAR decvarp decvar
    (5) decvar -> .
    (47) statements -> . assign
    (48) statements -> . function
    (49) statements -> . voidfunction
    (50) statements -> . call
    (51) statements -> . read
    (52) statements -> . print
    (53) statements -> . if
    (54) statements -> . while
    (55) statements -> . for
    (56) assign -> . var EQUAL exp SEMICOLON
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
    (62) call -> . ID LPAREN callp RPAREN
    (57) read -> . READ var
    (58) print -> . PRINT LPAREN printp
    (65) if -> . IF LPAREN exp RPAREN quadsIf statements ifelse jumpsIf
    (71) while -> . WHILE LPAREN saveJumps exp RPAREN quadsWhile statements jumpsWhile whilep
    (77) for -> . FOR LPAREN var SEMICOLON exp SEMICOLON exp RPAREN LBRACKET statements forp
    (61) var -> . ID

  ! reduce/reduce conflict for RBRACE resolved using rule 5 (decvar -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    VAR             shift and go to state 7
    RBRACE          reduce using rule 5 (decvar -> .)
    FUNCTION        shift and go to state 11
    ID              shift and go to state 54
    READ            shift and go to state 55
    PRINT           shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59

  ! RBRACE          [ reduce using rule 22 (body -> .) ]
  ! FUNCTION        [ reduce using rule 5 (decvar -> .) ]
  ! ID              [ reduce using rule 5 (decvar -> .) ]
  ! READ            [ reduce using rule 5 (decvar -> .) ]
  ! PRINT           [ reduce using rule 5 (decvar -> .) ]
  ! IF              [ reduce using rule 5 (decvar -> .) ]
  ! WHILE           [ reduce using rule 5 (decvar -> .) ]
  ! FOR             [ reduce using rule 5 (decvar -> .) ]

    body                           shift and go to state 60
    decvar                         shift and go to state 42
    statements                     shift and go to state 43
    assign                         shift and go to state 44
    function                       shift and go to state 45
    voidfunction                   shift and go to state 46
    call                           shift and go to state 47
    read                           shift and go to state 48
    print                          shift and go to state 49
    if                             shift and go to state 50
    while                          shift and go to state 51
    for                            shift and go to state 52
    var                            shift and go to state 53

state 40

    (24) param -> type ID COMMA param .

    RPAREN          reduce using rule 24 (param -> type ID COMMA param .)


state 41

    (11) function -> FUNCTION type decfunc LPAREN param RPAREN LBRACE body . RBRACE

    RBRACE          shift and go to state 61


state 42

    (19) body -> decvar . statements body
    (21) body -> decvar .
    (47) statements -> . assign
    (48) statements -> . function
    (49) statements -> . voidfunction
    (50) statements -> . call
    (51) statements -> . read
    (52) statements -> . print
    (53) statements -> . if
    (54) statements -> . while
    (55) statements -> . for
    (56) assign -> . var EQUAL exp SEMICOLON
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
    (62) call -> . ID LPAREN callp RPAREN
    (57) read -> . READ var
    (58) print -> . PRINT LPAREN printp
    (65) if -> . IF LPAREN exp RPAREN quadsIf statements ifelse jumpsIf
    (71) while -> . WHILE LPAREN saveJumps exp RPAREN quadsWhile statements jumpsWhile whilep
    (77) for -> . FOR LPAREN var SEMICOLON exp SEMICOLON exp RPAREN LBRACKET statements forp
    (61) var -> . ID

    RBRACE          reduce using rule 21 (body -> decvar .)
    FUNCTION        shift and go to state 11
    ID              shift and go to state 54
    READ            shift and go to state 55
    PRINT           shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59

    statements                     shift and go to state 62
    assign                         shift and go to state 44
    function                       shift and go to state 45
    voidfunction                   shift and go to state 46
    call                           shift and go to state 47
    read                           shift and go to state 48
    print                          shift and go to state 49
    if                             shift and go to state 50
    while                          shift and go to state 51
    for                            shift and go to state 52
    var                            shift and go to state 53

state 43

    (20) body -> statements . body
    (19) body -> . decvar statements body
    (20) body -> . statements body
    (21) body -> . decvar
    (22) body -> .
    (3) decvar -> . VAR decvarp
    (4) decvar -> . VAR decvarp decvar
    (5) decvar -> .
    (47) statements -> . assign
    (48) statements -> . function
    (49) statements -> . voidfunction
    (50) statements -> . call
    (51) statements -> . read
    (52) statements -> . print
    (53) statements -> . if
    (54) statements -> . while
    (55) statements -> . for
    (56) assign -> . var EQUAL exp SEMICOLON
    (11) function -> . FUNCTION type decfunc LPAREN param RPAREN LBRACE body RBRACE
    (13) voidfunction -> . FUNCTION VOID decfunc LPAREN param RPAREN LBRACE body RBRACE
    (62) call -> . ID LPAREN callp RPAREN
    (57) read -> . READ var
    (58) print -> . PRINT LPAREN printp
    (65) if -> . IF LPAREN exp RPAREN quadsIf statements ifelse jumpsIf
    (71) while -> . WHILE LPAREN saveJumps exp RPAREN quadsWhile statements jumpsWhile whilep
    (77) for -> . FOR LPAREN var SEMICOLON exp SEMICOLON exp RPAREN LBRACKET statements forp
    (61) var -> . ID

  ! reduce/reduce conflict for RBRACE resolved using rule 5 (decvar -> .)
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    VAR             shift and go to state 7
    RBRACE          reduce using rule 5 (decvar -> .)
    FUNCTION        shift and go to state 11
    ID              shift and go to state 54
    READ            shift and go to state 55
    PRINT           shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59

  ! RBRACE          [ reduce using rule 22 (body -> .) ]
  ! FUNCTION        [ reduce using rule 5 (decvar -> .) ]
  ! ID              [ reduce using rule 5 (decvar -> .) ]
  ! READ            [ reduce using rule 5 (decvar -> .) ]
  ! PRINT           [ reduce using rule 5 (decvar -> .) ]
  ! IF              [ reduce using rule 5 (decvar -> .) ]
  ! WHILE           [ reduce using rule 5 (decvar -> .) ]
  ! FOR             [ reduce using rule 5 (decvar -> .) ]

    statements                     shift and go to state 43
    body                           shift and go to state 63
    decvar                         shift and go to state 42
    assign                         shift and go to state 44
    function                       shift and go to state 45
    voidfunction                   shift and go to state 46
    call                           shift and go to state 47
    read                           shift and go to state 48
    print                          shift and go to state 49
    if                             shift and go to state 50
    while                          shift and go to state 51
    for                            shift and go to state 52
    var                            shift and go to state 53

state 44

    (47) statements -> assign .

    VAR             reduce using rule 47 (statements -> assign .)
    FUNCTION        reduce using rule 47 (statements -> assign .)
    ID              reduce using rule 47 (statements -> assign .)
    READ            reduce using rule 47 (statements -> assign .)
    PRINT           reduce using rule 47 (statements -> assign .)
    IF              reduce using rule 47 (statements -> assign .)
    WHILE           reduce using rule 47 (statements -> assign .)
    FOR             reduce using rule 47 (statements -> assign .)
    RBRACE          reduce using rule 47 (statements -> assign .)
    ELSE            reduce using rule 47 (statements -> assign .)
    SEMICOLON       reduce using rule 47 (statements -> assign .)
    RBRACKET        reduce using rule 47 (statements -> assign .)


state 45

    (48) statements -> function .

    VAR             reduce using rule 48 (statements -> function .)
    FUNCTION        reduce using rule 48 (statements -> function .)
    ID              reduce using rule 48 (statements -> function .)
    READ            reduce using rule 48 (statements -> function .)
    PRINT           reduce using rule 48 (statements -> function .)
    IF              reduce using rule 48 (statements -> function .)
    WHILE           reduce using rule 48 (statements -> function .)
    FOR             reduce using rule 48 (statements -> function .)
    RBRACE          reduce using rule 48 (statements -> function .)
    ELSE            reduce using rule 48 (statements -> function .)
    SEMICOLON       reduce using rule 48 (statements -> function .)
    RBRACKET        reduce using rule 48 (statements -> function .)


state 46

    (49) statements -> voidfunction .

    VAR             reduce using rule 49 (statements -> voidfunction .)
    FUNCTION        reduce using rule 49 (statements -> voidfunction .)
    ID              reduce using rule 49 (statements -> voidfunction .)
    READ            reduce using rule 49 (statements -> voidfunction .)
    PRINT           reduce using rule 49 (statements -> voidfunction .)
    IF              reduce using rule 49 (statements -> voidfunction .)
    WHILE           reduce using rule 49 (statements -> voidfunction .)
    FOR             reduce using rule 49 (statements -> voidfunction .)
    RBRACE          reduce using rule 49 (statements -> voidfunction .)
    ELSE            reduce using rule 49 (statements -> voidfunction .)
    SEMICOLON       reduce using rule 49 (statements -> voidfunction .)
    RBRACKET        reduce using rule 49 (statements -> voidfunction .)


state 47

    (50) statements -> call .
